css/styles.css
/* ... */
.blog-main-article-pic {
  width: 636px;
  height: 361px;

  background-color: var(--light);
}

.blog-main-article-text {
  padding-top: 20px;
  width: 459px;
}

.blog-descr {
  padding-left: 41px;
  margin-bottom: 13px;
}

.blog-author {
  position: relative;

  margin-right: 30px;
}

.blog-author::before {
  content: "";
  display: block;
  position: absolute;
  top: 50%;
  left: -41px;

  width: 31px;
  height: 1px;

  background-color: var(--dark-text);
}

.blog-theme {
  position: relative;
}

.blog-theme::before {
  position: absolute;
  content: "";
  display: block;
  left: -16px;
  top: 0.4em;

  width: 6px;
  height: 6px;

  border-radius: 50%;

  background-color: var(--dark-text);
}

.blog-main-article-title {
  margin-bottom: 12px;

  color: var(--dark);
  font-family: "Jost", sans-serif;
  font-size: 32px;
  font-weight: 600;
  line-height: 1.313;
}

.blog-main-article-paragraph {
  width: 419px;
  margin-bottom: 22px;
}

.blog-button {
  display: flex;
  align-items: center;
  gap: 10px;

  width: fit-content;
  padding: 15px 15px 15px 0;

  border: transparent;

  background-color: transparent;

  color: var(--dark);
  font-family: "Jost", sans-serif;
  font-size: 16px;
  font-weight: 600;
  line-height: 1.625;
  fill: var(--dark);

  cursor: pointer;

  transition: color var(--transition), fill var(--transition);
}

.blog-button:hover,
.blog-button:focus {
  color: var(--accent);
  fill: var(--accent);
}

.blog-list {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 24px;

  margin-bottom: 42px;
}

.blog-article {
  position: relative;
  z-index: 10;

  width: calc((100% - 48px) / 3);
  height: 526px;
  padding: 30px 30px 23px;

  border: 1px solid var(--light-text);
   
  background-color: var(--bg-color);

  text-align: left;

  cursor: pointer;
  box-shadow: 0 0 0 rgba(0, 0, 0, 0);

  transition: border var(--transition), box-shadow var(--transition);
}

.blog-article-pic {
  width: 356px;
  height: 300px;

  background-color: #d8d8d8;
  
  object-fit: cover;
}

.blog-descr.blog-descr-other {
  margin-bottom: 17px;
}

.blog-article-title {
  margin-bottom: 14px;

  color: var(--dark);
  text-transform: capitalize;
  font-family: "Jost", sans-serif;
  font-size: 24px;
  font-weight: 600;
  line-height: 1.417;
}

.blog-button.blog-button-listed {
  padding: 0;

  color: var(--dark);
  fill: var(--dark);
}

.blog-more {
  margin: 0 auto;
}

.blog-article-date {
  position: absolute;
  top: 238px;
  right: 40px;

  width: 73px;
  height: 68px;
  padding: 8px 13px 8px 12px;

  background-image: url(../assets/img/date.png);
  background-size: contain;
  background-position: 0 0;
  background-repeat: no-repeat;

  color: var(--bg-color);
  text-align: center;

  opacity: 0;
  visibility: hidden;

  transition: opacity var(--transition), visibility var(--transition);
}

.blog-article:hover {
  border: 1px solid transparent;
  
  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
}

.blog-article:hover .blog-article-date {
  opacity: 1;
  visibility: visible;
}

.blog-article:hover .blog-button-listed {
  color: var(--accent);
  fill: var(--accent);
}

.blog-button-listed:focus {
  color: var(--accent);
  fill: var(--accent);
}

/* --------- FOOTER --------- */

.footer {
  background-color: var(--dark);
  background-image: url(../assets/img/city.webp);
  background-size: contain;
  background-position: 0 684px;
  background-repeat: no-repeat;

  scroll-margin-top: 145px;
}

.map-wrapper {
  position: relative;

  width: 100%;
  height: 0;
  padding-bottom: 568px;
  
  overflow: hidden;
}

.map-wrapper iframe {
  position: absolute;
  top: 0;
  left: 0;

  width: 100%;
  height: 100%;

  border: 0;

  filter: grayscale(100%);
}

.contact-container {
  position: relative;
}

.sign-up-wrapper {
  position: absolute;
  top: -92px;
  display: flex;
  flex-direction: row;
  gap: 257px;

  width: 100%;
  height: 184px;
  padding: 51px 109px;
  
  background-color: var(--accent);
  background-image: url(../assets/img/newsletter.webp);
  background-repeat: no-repeat;
  background-size: auto;
  background-position: top 40px left 270px;
}

.sign-up-cta {
  width: 403px;

  color: var(--bg-color);
  font-family: "Jost", sans-serif;
  font-size: 32px;
  font-weight: 600;
  line-height: 1.313;

  text-transform: capitalize;
}

.sign-up-form {
  position: relative;

  margin-top: 10px;
}

.sign-up-input {
  width: 417px;
  height: 45px;
  padding-left: 10px;

  border: none;
  border-bottom: 1px solid var(--bg-color);

  background-color: transparent;
  
  color: var(--bg-color);
}

.sign-up-input::placeholder {
  color: rgba(255, 255, 255, 0.5);
  font-size: 14px;
}

.sign-up-input:focus {
  outline: none;
  border-bottom: 1px solid var(--bg-color);
}

.sign-up-button {
  position: absolute;
  top: 0;
  right: 0;

  width: 38px;
  height: 31px;

  border: none;

  background-color: var(--bg-color);

  fill: var(--accent);
  
  cursor: pointer;
}

.sign-up-arrow {
  transition: transform var(--transition);
}

.sign-up-button:hover .sign-up-arrow {
  transform: scale(1.3);
}

.footer-lower {
  display: flex;
  gap: 0;

  padding-top: 232px;
}

.footer-lower > div:nth-child(1) {
  width: 407px;
  margin-right: 150px;
}
.footer-lower > div:nth-child(2) {
  width: 200px;
  margin-right: 20px;
}
.footer-lower > div:nth-child(3) {
  width: 310px;
  margin-right: 20px;
}

.footer-lower > div:nth-child(4) {
  width: 195px;
}

.footer-logo {
  padding: 0;
}

.footer-logo-text {
  color: var(--footer-light);
}

.footer-text {
  width: 400px;
  margin-top: 12px;

  color: var(--footer-light);
}

.footer-available {
  margin-top: 36px;

  color: var(--bg-color);
  font-family: "Jost", sans-serif;
  font-weight: 600;
  text-transform: capitalize;
}

.footer-hours {
  margin-top: 6px;

  color: var(--accent);
}

.footer-header {
  margin-bottom: 24px;

  color: var(--bg-color);
  font-family: "Jost", sans-serif;
  font-weight: 600;
}
/* ... */

